--- a/235900_코드 유사성 판단 AI 경진대회/0. Generator.ipynb
+++ b/235900_코드 유사성 판단 AI 경진대회/0. Generator.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Baseline"
+    "# Generator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -51,9 +51,8 @@
     "import argparse\n",
     "\n",
     "parser = argparse.ArgumentParser(description='Generator')\n",
-    "parser.add_argument('--pretrained_model', default=\"codebert\", type=str)\n",
-    "parser.add_argument('--max_length', default=512, type=int)\n",
-    "parser.add_argument('--frac', default=1, type=float)\n",
+    "parser.add_argument('--pretrained_model', default=\"bert\", type=str) # bert or codebert\n",
+    "parser.add_argument('--max_length', default=384, type=int)\n",
     "parser.add_argument('--validation_split', default=0.2, type=float)\n",
     "parser.add_argument('--seed', default=1011, type=int)\n",
     "args = parser.parse_args('')\n",
@@ -67,7 +66,6 @@
     "tokenizer.truncation_side='left'\n",
     "\n",
     "MAX_LENGTH = args.max_length\n",
-    "FRAC = args.frac\n",
     "VALIDATION_SPLIT=args.validation_split\n",
     "SEED=args.seed\n",
     "\n",
@@ -83,32 +81,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generator"
+    "## Data Generating Process"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████| 45101/45101 [02:54<00:00, 258.55it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(45101, 45101)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def read_code(code):\n",
     "    with open(code,'r',encoding='utf-8') as file:\n",
@@ -138,34 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████| 45101/45101 [00:00<00:00, 128451.06it/s]\n",
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (745 > 512). Running this sequence through the model will result in indexing errors\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 44075 entries, 0 to 44074\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column       Non-Null Count  Dtype \n",
-      "---  ------       --------------  ----- \n",
-      " 0   code         44075 non-null  object\n",
-      " 1   problem_num  44075 non-null  object\n",
-      " 2   len          44075 non-null  int64 \n",
-      "dtypes: int64(1), object(2)\n",
-      "memory usage: 1.0+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def text_preprocessing(series):\n",
     "    temp = series.copy()\n",
@@ -191,8 +146,8 @@
     "def code_preprocessing(df):\n",
     "    temp = df.copy()\n",
     "    temp[\"code\"] = text_preprocessing(temp[\"code\"])\n",
-    "    temp[\"len\"] = temp[\"code\"].apply(tokenizer.tokenize).apply(len)\n",
-    "    temp = temp[temp['len']<=MAX_LENGTH].reset_index(drop=True)\n",
+    "    # temp[\"len\"] = temp[\"code\"].apply(tokenizer.tokenize).apply(len)\n",
+    "    # temp = temp[temp['len']<=MAX_LENGTH].reset_index(drop=True)\n",
     "    return temp\n",
     "\n",
     "df = pd.DataFrame({'code': code_list,\n",
@@ -206,15 +161,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 13%|██████████▌                                                                      | 39/300 [01:08<04:44,  1.09s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def generator(df):\n",
     "    \n",
@@ -235,8 +182,12 @@
     "        solution_codes_indices = solution_codes.index.to_list()\n",
     "        negative_pairs = []\n",
     "\n",
-    "        first_tokenized_code = tokenizer.tokenize(positive_pairs[0][0])\n",
-    "        negative_code_scores = bm25.get_scores(first_tokenized_code)\n",
+    "        ### scoring\n",
+    "        negative_code_scores = []\n",
+    "        for solution_code in solution_codes:\n",
+    "            tokenized_code = tokenizer.tokenize(solution_code)\n",
+    "            negative_code_scores.append(bm25.get_scores(tokenized_code))\n",
+    "        negative_code_scores = np.mean(negative_code_scores, axis=0)\n",
     "        negative_code_ranking = negative_code_scores.argsort()[::-1]\n",
     "        ranking_idx = 0\n",
     "\n",
@@ -275,7 +226,6 @@
     "        'code2':total_code2,\n",
     "        'similar':total_label\n",
     "    })\n",
-    "    pair_data = pair_data.sample(frac=FRAC).reset_index(drop=True)\n",
     "    return pair_data   \n",
     "    \n",
     "\n",
@@ -306,8 +256,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df.to_csv(f'train_{args.pretrained_model}_{args.max_length}.csv', index=False)\n",
-    "valid.to_csv(f'valid_{args.pretrained_model}_{args.max_length}.csv', index=False)"
+    "# %%time\n",
+    "\n",
+    "# train_df.to_csv(f'train_{args.pretrained_model}.csv', index=False)\n",
+    "# valid_df.to_csv(f'valid_{args.pretrained_model}.csv', index=False)"
    ]
   }
  ],
